--- a/idearly-fe/.prettierrc
+++ b/idearly-fe/.prettierrc
@@ -5,6 +5,6 @@
   "useTabs": false,
   "tabWidth": 2,
   "printWidth": 120,
-  "arrowPattern": "always",
+  "arrowParens": "always",
   "organizeImports": "true"
 }
