--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           # node_modules라는 폴더를 검사하여
           path: ./idearly/node_modules
           # 아래 키값으로 cache가 돼있는지 확인한다.
-          key: npm-packages-${{ hashFiles('**/package-lock.json') }}
+          key: yarn-packages-${{ hashFiles('**/package-lock.json') }}
 
         # 위 step에서 node_modules에 대한 cache 검사를 했다.
         # 만약 모듈에 변한 게 있다면 `npm install`을 실행하고 아니면 해당 step을 건너뛰게 된다.
@@ -49,12 +49,12 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           cd ./idearly
-          npm install
+          yarn install
 
       - name: Build
         run: |
           cd ./idearly
-          npm run build
+          yarn build
 
       # Docker에 연결하여 이미지를 빌드하고 Hub에 푸시한다.
       # https://docs.docker.com/build/ci/github-actions/#step-three-define-the-workflow-steps
@@ -71,7 +71,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: ./idearly/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/jmdb
 
