--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./idearly
-          file: ./Dockerfile.prod
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/jmdb
 
