chore: docker image 이름 idearly로 변경

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
           context: .
           file: ./idearly/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/jmdb
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/idearly
 
       # 마지막으로 ssh로 인스턴스에 연결하여 이미지를 Pull하고 컨테이너를 재시작한다.
       - name: Pull and restart Docker Container
@@ -83,6 +83,6 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           script: |
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/jmdb
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/idearly
             sudo docker stop jmdb
-            sudo docker run -d --rm --name jmdb -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/jmdb
+            sudo docker run -d --rm --name jmdb -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/idearly
