--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,12 @@
 name: Deploy
+
 on:
   push:
-    branches: [main] # main 브랜치에 push 발생하면 트리거
+    branches: [ "main" ]
+  pull_request:
+    types:
+    - closed
+    branches: [ "main" ]
   workflow_dispatch: # 디버깅용, actions 탭에서 직접 버튼 눌러서 트리거
 
 jobs:
