--- a/idearly/package.json
+++ b/idearly/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@stomp/stompjs": "^7.0.0",
+    "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
@@ -24,7 +25,7 @@
     "socket.io-client": "^4.7.2",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
-    "uuid": "^9.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
