--- a/idearly/package.json
+++ b/idearly/package.json
@@ -17,14 +17,15 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.13.4",
     "@tanstack/react-query-devtools": "^5.13.5",
-    "axios": "^1.6.2",
-    "@stomp/stompjs": "^7.0.0",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "jotai": "^2.6.0",
+    "localtunnel": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
@@ -36,8 +37,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
     "@tanstack/eslint-plugin-query": "^5.12.1",
+    "@types/node": "^20.10.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/uuid": "^9.0.7",
