--- a/idearly/package.json
+++ b/idearly/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "jotai": "^2.6.0",
+    "js-cookie": "^3.0.5",
     "localtunnel": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.12.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
