--- a/idearly/package.json
+++ b/idearly/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.1",
     "socket.io-client": "^4.7.2",
     "sockjs-client": "^1.6.1",
