--- a/idearly/package.json
+++ b/idearly/package.json
@@ -37,6 +37,7 @@
     "socket.io-client": "^4.7.2",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "typed-react-markdown": "^0.1.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
