--- a/idearly/tsconfig.json
+++ b/idearly/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["js-cookie", "react-markdown", "rehype-raw", "dompurify"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
