--- a/idearly/package.json
+++ b/idearly/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.12.1",
+    "@types/codemirror": "^5.60.15",
     "@types/dompurify": "^3.0.5",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.10.4",
