--- a/idearly/package.json
+++ b/idearly/package.json
@@ -29,6 +29,7 @@
     "@types/stompjs": "^2.3.9",
     "@uiw/codemirror-theme-github": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.6.2",
     "codemirror": "^6.0.1",
     "framer-motion": "^10.16.16",
@@ -57,7 +58,6 @@
     "@tanstack/eslint-plugin-query": "^5.12.1",
     "@types/codemirror": "^5.60.15",
     "@types/dompurify": "^3.0.5",
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
