--- a/idearly/tsconfig.json
+++ b/idearly/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "types": ["codemirror", "yorkie-js-sdk"],
+    "types": ["codemirror"],
     "typeRoots": ["node_modules/@types"],
 
     /* Bundler mode */
