--- a/idearly/package.json
+++ b/idearly/package.json
@@ -52,11 +52,11 @@
     "y-websocket": "^1.5.1",
     "yjs": "^13.6.10",
     "yorkie-js-sdk": "^0.4.11",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@types/codemirror": "^5.60.15"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.12.1",
-    "@types/codemirror": "^5.60.15",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.37",
