--- a/idearly/package.json
+++ b/idearly/package.json
@@ -25,6 +25,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.13.4",
     "@tanstack/react-query-devtools": "^5.13.5",
+    "@types/codemirror": "^5.60.15",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "@uiw/codemirror-theme-github": "^4.21.21",
@@ -41,6 +42,7 @@
     "react-hook-form": "^7.49.2",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.1",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
     "socket.io-client": "^4.7.2",
     "sockjs-client": "^1.6.1",
@@ -52,8 +54,7 @@
     "y-websocket": "^1.5.1",
     "yjs": "^13.6.10",
     "yorkie-js-sdk": "^0.4.11",
-    "zod": "^3.22.4",
-    "@types/codemirror": "^5.60.15"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.12.1",
