--- a/idearly/package.json
+++ b/idearly/package.json
@@ -25,6 +25,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.13.4",
     "@tanstack/react-query-devtools": "^5.13.5",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@types/codemirror": "^5.60.15",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
