--- a/idearly/package.json
+++ b/idearly/package.json
@@ -28,7 +28,6 @@
     "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.3",
     "@types/codemirror": "^5.60.15",
-    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "@uiw/codemirror-theme-github": "^4.21.21",
@@ -45,7 +44,7 @@
     "react-hook-form": "^7.49.2",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.1",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-syntax-highlighter": "11.0.3",
     "remark-gfm": "^4.0.0",
     "socket.io-client": "^4.7.2",
     "sockjs-client": "^1.6.1",
@@ -65,6 +64,7 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-syntax-highlighter": "11.0.5",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
